--- a/tema/index.html
+++ b/tema/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>{{ websiteName }}</title>
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml" />
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ rootPath }}/rss.xml" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -20,7 +20,7 @@
 <!-- Navigation -->
 <nav class="bg-white shadow sticky top-0 z-10">
   <div class="max-w-5xl mx-auto px-4 py-4 flex justify-center space-x-6 text-gray-700 text-sm font-medium">
-    <a href="/" class="hover:text-indigo-600">Home</a>
+    <a href="{{ rootPath }}/" class="hover:text-indigo-600">Home</a>
     {{ for page in pages }}
     <a href="{{ page.link }}" class="hover:text-indigo-600">{{ page.name }}</a>
     {{ endfor }}
