--- a/tema/post.html
+++ b/tema/post.html
@@ -67,7 +67,7 @@
     <!-- RSS -->
     <div>
       <h3 class="text-lg font-semibold mb-2 border-b pb-1">📡 Subscribe</h3>
-      <a href="/rss.xml" class="text-indigo-600 hover:underline text-sm">RSS Feed</a>
+      <a href="{{ websiteName }}/rss.xml" class="text-indigo-600 hover:underline text-sm">RSS Feed</a>
     </div>
 
     <!-- Categories -->
